Fixes from conversation